--- a/style/style.css
+++ b/style/style.css
@@ -29,9 +29,15 @@ li{
         width: 200px;
     }
 }
-@media screen and (min-width:576px) and (max-width:767px){
+@media screen and (min-width:577px) and (max-width:767px){
     .DivRedondo{
         height: 300px;
-        width: 300px;
+        width: 200px;
+    }
+}
+@media screen and (min-width:300px) and (max-width:576px){
+    .DivRedondo{
+        height: 300px;
+        width: 200px;
     }
 }
