--- a/style/style.css
+++ b/style/style.css
@@ -17,21 +17,27 @@ ul{
 li{
     list-style:none;
 }
-@media screen and (min-width:1200px) and (max-width:1880px){
+@media screen and (min-width:992px) and (max-width:1200px){
     .DivRedondo{
         height: 200px;
         width: 200px;
     }
 }
-@media screen and (min-width:300px) and (max-width:578px){
+@media screen and (min-width:768px) and (max-width:991px){
     .DivRedondo{
-        height: 100%;
-        width: 100%;
+        height: 200px;
+        width: 200px;
     }
 }
-@media screen and (min-width:100px) and (max-width:299px){
+@media screen and (min-width:577px) and (max-width:767px){
     .DivRedondo{
-        height: 100%;
-        width: 100%;
+        height: 300px;
+        width: 200px;
+    }
+}
+@media screen and (min-width:300px) and (max-width:576px){
+    .DivRedondo{
+        height: 300px;
+        width: 200px;
     }
 }
